Slightly improve issue with the text block resized with background
As Miina found, when the Text block is resized small
and has a background width,
it appears too tall in the block editor.
This removes the padding-top and bottom,
leaving only padding-left and right.
It doesn't completely fix the difference in the
front-end and back-end display, but it looks better locally.

--- a/assets/css/amp-stories.css
+++ b/assets/css/amp-stories.css
@@ -1,7 +1,7 @@
 amp-story-grid-layer[template="fill"] .wp-block-image { margin: 0; }
 
 .has-background {
-	padding: 7px !important;
+	padding: 1px 5px !important;
 	display: flex;
 }
 
